# container-viz

./: Cargo.toml  README.md  Reference.md  container-viz.mermaid
src/: app.rs  config.rs  docker.rs  event.rs  lib.rs  main.rs  types.rs
src/host_task/: connection.rs  logs.rs  mod.rs  stats.rs
src/model/: app.rs  container.rs  host.rs  messages.rs  mod.rs
src/types/: app.rs  container.rs  host.rs  messaging.rs  mod.rs  ui.rs
src/ui/: container_list.rs  detail_panel.rs  log_viewer.rs  mod.rs  statusline.rs  tabs.rs
src/ui/overlays/: command_palette.rs  confirm.rs  help.rs  host_manager.rs  mod.rs
